<package>
  <name>gazebo_attache_plugin</name>
  <version>0.1.0</version>

  <description>
    Plugin to implement object-to-eef attachment (such as when grasping) for gazebo.
  </description>

  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  <license>BSD</license>

  <url type="website">http://open-ease.org</url>
  <url type="bugtracker">https://github.com/code-iai/gazebo_attache_plugin/issues</url>
  <url type="repository">https://github.com/code-iai/gazebo_attache_plugin</url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>attache_msgs</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>attache_msgs</run_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>


